--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -40,7 +40,7 @@
                         android:textSize="18sp"
                         android:singleLine="true"
                         android:fontFamily="@font/teachers_regular"
-                        android:hint="Product Name"
+                        android:hint="@string/ProductName"
                         android:textColorHint="@color/hintcolor"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -59,7 +59,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:fontFamily="@font/teachers_regular"
-                        android:hint="Actual Price"
+                        android:hint="@string/ActualPrice"
                         android:maxLength="9"
                         android:singleLine="true"
                         android:inputType="number"
@@ -81,7 +81,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:fontFamily="@font/teachers_regular"
-                        android:hint="Offer Price"
+                        android:hint="@string/OfferPrice"
                         android:maxLength="9"
                         android:singleLine="true"
                         android:inputType="number"
@@ -103,7 +103,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:fontFamily="@font/teachers_regular"
-                        android:hint="Phone Number"
+                        android:hint="@string/PhoneNumber"
                         android:inputType="phone"
                         android:singleLine="true"
                         android:maxLength="10"
@@ -126,7 +126,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:fontFamily="@font/teachers_regular"
-                        android:hint="Colour"
+                        android:hint="@string/Colour"
                         android:singleLine="true"
                         android:textColorHint="@color/hintcolor"/>
                 </com.google.android.material.textfield.TextInputLayout>
@@ -146,7 +146,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:fontFamily="@font/teachers_regular"
-                        android:hint="Brand"
+                        android:hint="@string/Brand"
                         android:singleLine="true"
                         android:textColorHint="@color/hintcolor"/>
                 </com.google.android.material.textfield.TextInputLayout>
@@ -166,7 +166,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textSize="18sp"
-                        android:hint="Address"
+                        android:hint="@string/Address"
                         android:fontFamily="@font/teachers_regular"
                         android:layout_gravity="start"
                         android:gravity="start"
@@ -187,7 +187,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textSize="18sp"
-                        android:hint="Features"
+                        android:hint="@string/Features"
                         android:fontFamily="@font/teachers_regular"
                         android:layout_gravity="start"
                         android:gravity="start"
@@ -208,7 +208,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textSize="18sp"
-                        android:hint="Description"
+                        android:hint="@string/description"
                         android:fontFamily="@font/teachers_regular"
                         android:layout_gravity="start"
                         android:gravity="start"
@@ -219,7 +219,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Max 200 characters allowed"
+                    android:text="@string/MaxCharactersAllowed"
                     android:textColor="@color/colorPrimary"
                     android:fontFamily="@font/teachers_medium"
                     android:layout_gravity="end"
@@ -248,7 +248,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="Multiple image"
+                            android:text="@string/MultipleImages"
                             android:fontFamily="@font/teachers_regular"
                             android:textColor="@color/text"
                             android:textSize="16sp"
@@ -263,7 +263,7 @@
                         android:layout_marginEnd="15dp"
                         android:singleLine="true"
                         android:gravity="end"
-                        android:text="Upload Image.jpg"
+                        android:text="@string/UploadImage"
                         android:fontFamily="@font/teachers_regular"
                         android:textColor="@color/text"
                         android:textSize="18sp"
@@ -288,7 +288,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Submit"
+                        android:text="@string/Submit"
                         android:fontFamily="@font/teachers_medium"
                         android:textColor="@color/white"
                         android:textSize="20sp"
