--- a/app/src/main/res/layout/activity_edit_post.xml
+++ b/app/src/main/res/layout/activity_edit_post.xml
@@ -41,7 +41,7 @@
                         android:fontFamily="@font/teachers_regular"
                         android:layout_gravity="center_vertical"
                         android:gravity="center_vertical"
-                        android:text="Select Location"/>
+                        android:text="@string/SelectLocation"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -83,7 +83,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:fontFamily="@font/teachers_regular"
-                        android:hint="Title"
+                        android:hint="@string/Title"
                         android:textColorHint="@color/hintcolor"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -102,7 +102,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:fontFamily="@font/teachers_regular"
-                        android:hint="Desctiption"
+                        android:hint="@string/description"
                         android:textColorHint="@color/hintcolor"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -121,7 +121,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:fontFamily="@font/teachers_regular"
-                        android:hint="Phone Number"
+                        android:hint="@string/PhoneNumber"
                         android:inputType="phone"
                         android:maxLength="10"
                         android:textColorHint="@color/hintcolor"/>
@@ -142,7 +142,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:fontFamily="@font/teachers_regular"
-                        android:hint="Landline Number"
+                        android:hint="@string/LandLineNumber"
                         android:inputType="phone"
                         android:textColorHint="@color/hintcolor"/>
                 </com.google.android.material.textfield.TextInputLayout>
@@ -162,7 +162,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:fontFamily="@font/teachers_regular"
-                        android:hint="Email"
+                        android:hint="@string/Email"
                         android:textColorHint="@color/hintcolor"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -180,7 +180,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textSize="18sp"
-                        android:hint="Address"
+                        android:hint="@string/Address"
                         android:fontFamily="@font/teachers_regular"
                         android:layout_gravity="start"
                         android:gravity="start"
@@ -201,7 +201,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textSize="18sp"
-                        android:hint="About Company"
+                        android:hint="@string/AboutCompany"
                         android:fontFamily="@font/teachers_regular"
                         android:layout_gravity="start"
                         android:gravity="start"
@@ -222,7 +222,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textSize="18sp"
-                        android:hint="Services List"
+                        android:hint="@string/ServicesList"
                         android:fontFamily="@font/teachers_regular"
                         android:layout_gravity="start"
                         android:gravity="start"
@@ -233,7 +233,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="Cover Photo"
+                    android:text="@string/CoverPhoto"
                     android:fontFamily="@font/teachers_medium"
                     android:textColor="@color/text"
                     android:textSize="18sp"/>
@@ -259,7 +259,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="Choose"
+                            android:text="@string/Choose"
                             android:fontFamily="@font/teachers_regular"
                             android:textColor="@color/text"
                             android:textSize="18sp"
@@ -281,7 +281,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="Gallery Photos"
+                    android:text="@string/GalleryPhotos"
                     android:fontFamily="@font/teachers_medium"
                     android:textColor="@color/text"
                     android:textSize="18sp"/>
@@ -307,7 +307,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="Multiple Images"
+                            android:text="@string/MultipleImages"
                             android:fontFamily="@font/teachers_regular"
                             android:textColor="@color/text"
                             android:textSize="18sp"
@@ -322,7 +322,7 @@
                         android:layout_marginEnd="15dp"
                         android:singleLine="true"
                         android:gravity="end"
-                        android:text="Upload Image.jpg"
+                        android:text="@string/UploadImage"
                         android:fontFamily="@font/teachers_regular"
                         android:textColor="@color/text"
                         android:textSize="18sp" />
@@ -347,7 +347,7 @@
                         android:layout_marginEnd="5dp"
                         android:singleLine="true"
                         android:gravity="end"
-                        android:text="add Images"
+                        android:text="@string/addImages"
                         android:fontFamily="@font/teachers_medium"
                         android:textColor="@color/white"
                         android:textSize="15sp" />
@@ -368,7 +368,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="25dp"
                     android:layout_gravity="center"
-                    android:text="No Gallery Images"
+                    android:text="@string/NoGalleryImages"
                     android:fontFamily="@font/teachers_medium"
                     android:textColor="@color/selectedRed"
                     android:textSize="18sp"/>
@@ -395,7 +395,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Submit"
+                        android:text="@string/Submit"
                         android:fontFamily="@font/teachers_medium"
                         android:textColor="@color/white"
                         android:textSize="20sp"
