--- a/app/src/main/res/layout/activity_help_and_support.xml
+++ b/app/src/main/res/layout/activity_help_and_support.xml
@@ -49,7 +49,7 @@
                             android:layout_height="wrap_content"
                             android:textSize="18sp"
                             android:fontFamily="@font/teachers_regular"
-                            android:hint="Name"
+                            android:hint="@string/Name"
                             android:singleLine="true"
                             android:textColorHint="@color/hintcolor"/>
                     </com.google.android.material.textfield.TextInputLayout>
@@ -70,7 +70,7 @@
                             android:layout_height="wrap_content"
                             android:textSize="18sp"
                             android:fontFamily="@font/teachers_regular"
-                            android:hint="Email Address"
+                            android:hint="@string/Email"
                             android:singleLine="true"
                             android:textColorHint="@color/hintcolor"
                             android:inputType="textEmailAddress"/>
@@ -91,7 +91,7 @@
                             android:layout_height="wrap_content"
                             android:textSize="18sp"
                             android:fontFamily="@font/teachers_regular"
-                            android:hint="Phone Number"
+                            android:hint="@string/PhoneNumber"
                             android:singleLine="true"
                             android:maxLength="10"
                             android:textColorHint="@color/hintcolor"
@@ -113,7 +113,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:textSize="18sp"
-                            android:hint="Write a Message"
+                            android:hint="@string/WriteAMessage"
                             android:fontFamily="@font/teachers_regular"
                             android:layout_gravity="start"
                             android:gravity="start"
@@ -137,7 +137,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="Submit"
+                            android:text="@string/Submit"
                             android:fontFamily="@font/teachers_medium"
                             android:textColor="@color/white"
                             android:textSize="20sp"
