--- a/app/src/main/res/layout/activity_terms_and_conditions.xml
+++ b/app/src/main/res/layout/activity_terms_and_conditions.xml
@@ -26,7 +26,6 @@
                     android:layout_height="200dp"
                     android:src="@drawable/terms_conditions_banners"
                     android:scaleType="fitXY"/>
-
                 <TextView
                     android:id="@+id/txtNote"
                     android:layout_width="wrap_content"
@@ -36,11 +35,9 @@
                     android:text="@string/note"
                     android:fontFamily="@font/teachers_regular"
                     android:textColor="@color/text"
-                    android:textSize="18sp"
-                    android:layout_centerVertical="true"/>
+                    android:textSize="18sp"/>
             </LinearLayout>
         </ScrollView>
-
 
     </LinearLayout>
 
