--- a/app/src/main/res/layout/fragment_sale.xml
+++ b/app/src/main/res/layout/fragment_sale.xml
@@ -32,7 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@null"
-                    android:hint="Search...."/>
+                    android:hint="@string/Search."/>
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -50,7 +50,7 @@
                 <com.denzcoskun.imageslider.ImageSlider
                     android:id="@+id/imageSlider"
                     android:layout_width="wrap_content"
-                    android:layout_height="180dp"
+                    android:layout_height="160dp"
                     android:paddingTop="5dp"
                     app:iss_auto_cycle="true"
                     app:iss_corner_radius="18"
@@ -96,7 +96,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="No data found"
+            android:text="@string/NoDataFound"
             android:textColor="@color/blue"
             android:textSize="25sp"
             android:fontFamily="@font/teachers_semibold"
