--- a/app/src/main/res/layout/activity_ask_questions.xml
+++ b/app/src/main/res/layout/activity_ask_questions.xml
@@ -37,7 +37,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="60dp"
-                    android:text="No Data"
+                    android:text="@string/NoDataFound"
                     android:fontFamily="@font/teachers_semibold"
                     android:textSize="25sp"
                     android:textColor="@color/blue"
@@ -49,7 +49,7 @@
                 android:layout_width="55dp"
                 android:layout_height="55dp"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_marginEnd="25dp"
                 android:layout_marginBottom="25dp"
                 app:cardBackgroundColor="@color/blue"
@@ -61,7 +61,6 @@
                     android:layout_gravity="center"/>
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
-
 
 
     </LinearLayout>
