--- a/app/src/main/res/layout/activity_categories_based_items_list.xml
+++ b/app/src/main/res/layout/activity_categories_based_items_list.xml
@@ -25,7 +25,6 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginStart="15dp"
-                    android:layout_centerVertical="true"
                     android:src="@drawable/back_ic"
                     app:tint="@color/white"/>
 
@@ -70,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_marginStart="15dp"
-                    android:text="your location..."
+                    android:text="@string/yourLocation."
                     android:padding="10dp"
                     android:textSize="16sp"
                     android:textColor="@color/blue"/>
@@ -107,7 +106,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@null"
-                        android:hint="Search...."
+                        android:hint="@string/Search."
                         android:textSize="18sp"/>
 
                 </LinearLayout>
@@ -168,7 +167,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:fontFamily="@font/teachers_medium"
-                    android:text="Empty!"
+                    android:text="@string/Empty"
                     android:textColor="#cdcdcd"
                     android:textSize="18sp" />
                 <androidx.appcompat.widget.AppCompatTextView
@@ -176,7 +175,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:fontFamily="@font/teachers_regular"
-                    android:text="Add something to make me happy!"
+                    android:text="@string/AddSomethingToMakeMeHappy"
                     android:textColor="#cdcdcd"
                     android:textSize="15sp" />
             </LinearLayout>
