--- a/app/src/main/res/layout/activity_conmany_info.xml
+++ b/app/src/main/res/layout/activity_conmany_info.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".Activitys.ConmanyInfoActivity">
+    tools:context=".Activitys.CompanyInfoActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,8 +37,7 @@
                     android:text="@string/note"
                     android:fontFamily="@font/teachers_regular"
                     android:textColor="@color/text"
-                    android:textSize="18sp"
-                    android:layout_centerVertical="true"/>
+                    android:textSize="18sp" />
             </LinearLayout>
         </ScrollView>
 
