--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -45,7 +45,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
                         android:fontFamily="@font/teachers_regular"
-                        android:hint="Name"
+                        android:hint="@string/Name"
                         android:textColorHint="@color/hintcolor"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -83,7 +83,7 @@
                             android:layout_height="wrap_content"
                             android:textSize="18sp"
                             android:fontFamily="@font/teachers_regular"
-                            android:hint="Phone Number"
+                            android:hint="@string/PhoneNumber"
                             android:inputType="phone"
                             android:maxLength="15"
                             android:textColorHint="@color/hintcolor"/>
@@ -110,7 +110,7 @@
                         android:filterTouchesWhenObscured="false"
                         android:fontFamily="@font/teachers_regular"
                         android:textSize="18sp"
-                        android:hint="Email"
+                        android:hint="@string/Email"
                         android:textColorHint="@color/hintcolor"
                         android:inputType="textEmailAddress"/>
                 </com.google.android.material.textfield.TextInputLayout>
@@ -122,7 +122,7 @@
                     android:layout_marginTop="15dp"
                     android:orientation="horizontal">
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
@@ -136,7 +136,7 @@
                             android:layout_marginStart="10dp"
                             android:textSize="18sp"
                             android:textColorHint="@color/hintcolor"
-                            android:text="Madhapur"/>
+                            android:text="@string/dummyTitle"/>
                     </LinearLayout>
 
                     <androidx.cardview.widget.CardView
@@ -156,7 +156,7 @@
                             android:layout_marginStart="10dp"
                             android:layout_marginEnd="10dp"
                             android:layout_gravity="center"
-                            android:text="change Location"
+                            android:text="@string/ChangeLocation"
                             android:singleLine="true"
                             android:fontFamily="@font/teachers_medium"
                             android:textColor="@color/text"
@@ -229,7 +229,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="Radius"
+                    android:text="@string/Radius"
                     android:textColor="@color/text"
                     android:fontFamily="@font/teachers_medium"
                     android:textSize="18sp"/>
@@ -259,7 +259,7 @@
                         android:gravity="center_vertical"
                         android:layout_marginStart="10dp"
                         android:textColorHint="@color/hintcolor"
-                        android:text="Madhapur"/>
+                        android:text="@string/dummyTitle"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -321,7 +321,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="Choose File"
+                            android:text="@string/ChooseFile"
                             android:fontFamily="@font/teachers_medium"
                             android:textColor="@color/text"
                             android:textSize="18sp"
@@ -332,13 +332,12 @@
                         android:id="@+id/txtFileName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
                         android:layout_gravity="center"
                         android:layout_marginEnd="15dp"
                         android:fontFamily="@font/teachers_regular"
                         android:gravity="end"
                         android:singleLine="true"
-                        android:text="Profile_Picture.jpg"
+                        android:text="@string/UploadImage"
                         android:textColor="@color/text"
                         android:textSize="18sp" />
 
@@ -361,7 +360,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Update Profile"
+                        android:text="@string/UpdateProfile"
                         android:fontFamily="@font/teachers_medium"
                         android:textColor="@color/white"
                         android:textSize="20sp"
