--- a/app/src/main/res/layout/activity_enquiry.xml
+++ b/app/src/main/res/layout/activity_enquiry.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Activitys.EnquiryPostActivity">
 
@@ -24,7 +23,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="No data found"
+            android:text="@string/NoDataFound"
             android:textColor="@color/blue"
             android:textSize="25sp"
             android:fontFamily="@font/teachers_semibold"
