--- a/app/src/main/res/layout/activity_enquiry_product.xml
+++ b/app/src/main/res/layout/activity_enquiry_product.xml
@@ -24,7 +24,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="No data found"
+            android:text="@string/NoDataFound"
             android:textColor="@color/blue"
             android:textSize="25sp"
             android:fontFamily="@font/teachers_semibold"
