--- a/app/src/main/res/layout/activity_job_alert_details.xml
+++ b/app/src/main/res/layout/activity_job_alert_details.xml
@@ -38,14 +38,14 @@
                     android:fontFamily="@font/teachers_medium"
                     android:text="XXX"
                     android:textColor="@color/txtdes"
-                    android:textSize="17dp"/>
+                    android:textSize="17sp"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:fontFamily="@font/teachers_medium"
-                    android:text="Post Date"
+                    android:text="@string/PostDate"
                     android:textColor="@color/black"
                     android:textSize="20sp"/>
                 <TextView
@@ -55,14 +55,14 @@
                     android:layout_marginTop="5dp"
                     android:fontFamily="@font/teachers_medium"
                     android:text="XXX"
-                    android:textSize="17dp"/>
+                    android:textSize="17sp"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:fontFamily="@font/teachers_medium"
-                    android:text="Last Date"
+                    android:text="@string/LastDate"
                     android:textColor="@color/black"
                     android:textSize="20sp"/>
                 <TextView
@@ -72,7 +72,7 @@
                     android:layout_marginTop="5dp"
                     android:fontFamily="@font/teachers_medium"
                     android:text="XXX"
-                    android:textSize="17dp"/>
+                    android:textSize="17sp"/>
             </LinearLayout>
         </ScrollView>
 
