--- a/app/src/main/res/layout/activity_map_location.xml
+++ b/app/src/main/res/layout/activity_map_location.xml
@@ -17,7 +17,6 @@
             android:id="@+id/cardSearch"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_below="@+id/li"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_marginStart="15dp"
@@ -40,8 +39,7 @@
                     android:layout_height="match_parent"
                     android:textSize="18sp"
                     android:background="@null"
-                    android:hint="Search...."/>
-
+                    android:hint="@string/Search."/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -55,7 +53,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Or"
+            android:text="@string/or"
             android:textSize="18sp"
             android:textColor="@color/colorPrimary"
             android:padding="10dp"
@@ -65,7 +63,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pick Your Location"
+            android:text="@string/PickYourLocation"
             android:textSize="18sp"
             android:padding="10dp"
             android:fontFamily="@font/teachers_semibold"
