--- a/app/src/main/res/layout/activity_post_listings.xml
+++ b/app/src/main/res/layout/activity_post_listings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <RelativeLayout
@@ -40,7 +39,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="No data found"
+            android:text="@string/NoDataFound"
             android:textColor="@color/blue"
             android:textSize="25sp"
             android:fontFamily="@font/teachers_semibold"
@@ -60,8 +59,6 @@
             android:layout_marginStart="20sp"
             android:layout_marginTop="20sp"
             app:cardElevation="8dp"
-            android:outlineAmbientShadowColor="@color/black"
-            android:outlineSpotShadowColor="@color/black"
             android:shadowColor="@color/black">
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="35dp"
