--- a/app/src/main/res/layout/activity_privacy_policy.xml
+++ b/app/src/main/res/layout/activity_privacy_policy.xml
@@ -35,8 +35,7 @@
                     android:text="@string/note"
                     android:fontFamily="@font/teachers_regular"
                     android:textColor="@color/text"
-                    android:textSize="18sp"
-                    android:layout_centerVertical="true"/>
+                    android:textSize="18sp" />
             </LinearLayout>
         </ScrollView>
 
