--- a/app/src/main/res/layout/all_categories_items_list.xml
+++ b/app/src/main/res/layout/all_categories_items_list.xml
@@ -1,54 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="8dp"
-    android:layout_marginStart="15dp"
-    android:layout_marginEnd="15dp"
+    android:layout_marginEnd="5dp"
+    android:layout_marginStart="5dp"
     android:layout_marginBottom="8dp"
-    app:cardElevation="5dp"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="15dp"
-    android:background="@color/white">
+    android:background="@drawable/home_categories_edge_gray"
+    android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/linearClick"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_vertical">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imgLogo"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+        android:padding="13dp">
+        <LinearLayout
+            android:id="@+id/linearImageBg"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/vision_dummy"/>
-        <TextView
-            android:id="@+id/txtTitle"
-            android:layout_width="match_parent"
+            android:gravity="center">
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imgLogo"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/vision_dummy"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginStart="15dp"
-            android:text="Vision Centres"
-            android:fontFamily="@font/teachers_regular"
-            android:textColor="@color/black"
-            android:textSize="18sp"
             android:layout_gravity="center_vertical"
-            android:singleLine="true"/>
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/txtTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/dummyTitle"
+                android:fontFamily="@font/teachers_medium"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:maxLines="2"/>
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/txtSubCount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/dummyConditions"
+                android:fontFamily="@font/teachers_medium"
+                android:textSize="12sp"/>
+        </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:id="@+id/imgArrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="10dp"
-            app:tint="@color/gray"
-            android:src="@drawable/right_arrow_ic"/>
-
+            android:src="@drawable/right_arrow_ic"
+            app:tint="@color/gray"/>
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#e2e8f0"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"/>
+
+</LinearLayout>
