--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -13,44 +13,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp">
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/lightGray"
-                    android:layout_marginStart="25dp"
-                    android:layout_centerVertical="true"
-                    android:layout_toStartOf="@+id/txtCTitle"/>
-                <TextView
-                    android:id="@+id/txtCTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginEnd="15dp"
-                    android:fontFamily="@font/teachers_medium"
-                    android:text="All Categories"
-                    android:textColor="@color/gray"
-                    android:textSize="18sp" />
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/lightGray"
-                    android:layout_marginEnd="25dp"
-                    android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/txtCTitle"/>
-            </RelativeLayout>
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="25dp"/>
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"/>
 
 
         </LinearLayout>
@@ -59,7 +27,7 @@
             android:id="@+id/cardAdd"
             android:layout_width="55dp"
             android:layout_height="55dp"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="25dp"
             android:layout_marginBottom="25dp"
