--- a/app/src/main/res/layout/sale_items_list.xml
+++ b/app/src/main/res/layout/sale_items_list.xml
@@ -12,16 +12,16 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="5dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="0dp"
         app:cardBackgroundColor="@color/white"
         android:layout_weight="1"
         android:outlineAmbientShadowColor="@color/blue"
-        android:outlineSpotShadowColor="@color/blue"
-        >
+        android:outlineSpotShadowColor="@color/blue">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/home_categories_edge_gray"
             android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatImageView
